syntax = "proto3";

option go_package = "github.com/kevin07696/auth-service/proto";

message AuthRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message AuthResponse {
  string user_id = 1;
}

service Auth {
  rpc Register(AuthRequest) returns (AuthResponse);
  rpc Login(AuthRequest) returns (AuthResponse);
}