syntax = "proto3";

option go_package = "./proto";

message LoginRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  string user_id = 1;
}

service Login {
  rpc Register(LoginRequest) returns (LoginResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}